environments/dev/tenants/platform-demo/ns.yaml
# ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-demo
  labels: { istio-injection: enabled }
---
